added site status

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <div class="container-fluid text-center p-5 bg-light mb-5">
         <h1>COVID-19 INDIA Live Tracker</h1>
+        <h6><b class="text-danger">Status: </b>In Developement</h6>
         <h5>Open Source Project for Tracking COVID-19 cases in INDIA</h5>
     </div>
 
