--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>COVID-19 Tracker</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
 </head>
 <body>
     <div class="container-fluid text-center p-5 bg-light mb-5">
@@ -17,19 +19,19 @@
     <div class="container text-center">
         <div class="row">
             <div class="col-3 text-info">
-               <h5>Active</h5>
+               <h5> Total Active</h5>
                <p id="active"></p>
           </div>
           <div class="col-3 text-warning">
-               <h5>Confirmed</h5>
+               <h5>Total Confirmed</h5>
                <p id="confirm"></p>
            </div>
           <div class="col-3 text-success">
-               <h5>Recoverd</h5>
+               <h5>Total Recoverd</h5>
                <p id="recover"></p>
           </div>
           <div class="col-3 text-danger">
-               <h5>Deceased</h5>
+               <h5>Total Deceased</h5>
                <p id="death"></p>
           </div>
         </div>
@@ -48,6 +50,27 @@
 
         <canvas id="chart"></canvas>
     </div>
+    <footer class="last">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12 text-center">
+                  <br>
+                    <label>Social Connections </label>
+                    <br>
+                    <a href="https://www.instagram.com/jobins76400/"><i class="fab fa-instagram mx-3"></i></a>
+                    <a href="https://www.youtube.com/channel/UCqVkzefq58a2762qr7Td37g?view_as=subscriber"><i class="fab fa-youtube mx-3"></i></a>
+                    <a href="https://www.facebook.com/jobins76400"><i class="fab fa-facebook-square mx-3"></i></a>
+                    <a href="https://github.com/Jobin-S"><i class="fab fa-github mx-3"></i></a>
+                    <a href="https://www.linkedin.com/in/jobin-s-0756671a8/"><i class="fab fa-linkedin mx-3"></i></a>
+                    <br><br>
+                    <label>Copyright © Jobin</label><br>
+                    <label>Website design by Jobin </label>
+
+
+                </div>
+            </div>
+        </div>
+    </footer>
     
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
