--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </script>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>COVID-19 Tracker</title>
+    <title>COVID-19 Live Tracker</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
